test/sema/negative/struct_names.out
struct_names.impala:8 col 22 - 32: error: mismatched types: expected 'T' but found 'S' as return type
